<?xml version="1.0"?>
<package format="2">
  <name>ee_cart_imped_control</name>
  <version>0.0.0</version>
  <description>

     A force/impedance controller.

  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="tsr42@cornell.edu">Travers Rhodes</maintainer>
  <author>Mario Bollini, Jenny Barry, and Huan Liu</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/ee_cart_imped_control</url>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>
  <depend>kdl</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>pr2_mechanism_model</depend>
  <depend>pluginlib</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>ee_cart_imped_msgs</depend>


  <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml" />
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
