<?xml version="1.0"?>
<package format="2">
  <name>ee_cart_imped_launch</name>
  <version>0.0.0</version>
  <maintainer email="tsr42@cornell.edu">Travers Rhodes</maintainer>

  <description>
    Launch files for the ee_cart_imped stack.
  </description>
  <author>Jenny Barry, Mario Bollini, and Huan Liu</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/ee_cart_imped_launch</url>
  <depend>ee_cart_imped_action</depend>
  <depend>ee_cart_imped_control</depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
