<?xml version="1.0"?>
<package format="2">
  <name>ee_cart_imped_msgs</name>
  <version>0.0.0</version>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="tsr42@cornell.edu">Travers Rhodes</maintainer>
  
  <description>
     Messages for ee_cart_imped stack.
  </description>
  <author>Jenny Barry, Mario Bollini, and Huan Liu</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/ee_cart_imped_msgs</url>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
